--- a/UI/css/signup.css
+++ b/UI/css/signup.css
@@ -323,3 +323,9 @@ input[type=text],input[type=password], select {
       }
       
   }
+
+  input[type="submit"]:disabled {
+    color: rgba(255, 255, 255, 0.596);
+    background-color: gray;
+    cursor: not-allowed;
+  }
